Ensure buttons always are right-aligned

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.css
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.css
@@ -20,5 +20,7 @@ mat-form-field {
 }
 
 .dialog-buttons {
-	margin-bottom: 20px;
+	float: right;
+	clear: both;
+	margin-bottom: 0;
 }
